remove text container because text-align fixed paragraph spacing issue.

--- a/src/Component/Hero/Hero.css
+++ b/src/Component/Hero/Hero.css
@@ -5,12 +5,12 @@
   border: 2px solid red;
 }
 
-.text-container {
+/* .text-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   border: 2px solid red;
-}
+} */
 
 .welcome {
   font-size: 1.4em;
@@ -23,4 +23,5 @@ span {
 p {
   color: white;
   border: 2px solid red;
+  text-align: center;
 }
